# smf-swarm-2.0

./: .gitignore  AGENTS.md  INSTALL.md  MANIFEST.in  README.md  pyproject.toml
docs/: CONSUMER_SKILLOPT.md  DOGFOOD.md  DOGFOOD_SKILLOPT_OFFLINE.md  MOCK_VS_LLM.md  PHASE1_DOD.md  PHASE1_STATUS.md  PRODUCT_APP_v0.2.md  PRODUCT_APP_v0.3.md  PRODUCT_APP_v0.4.1.md  PRODUCT_APP_v0.4.md  PRODUCT_APP_v0.5.md
docs/adr/: 0001-governance-first-foundation.md
fixtures/: sample_growth.csv  skillopt_edit_planning_trajectories.json
scripts/: compare_mock_vs_llm.py
src/smf_swarm/: __init__.py  cli.py
src/smf_swarm/analysis/: __init__.py  engine.py  series.py
src/smf_swarm/app/: __init__.py  auth.py  history.py  server.py
src/smf_swarm/app/static/: app.js  index.html  styles.css
src/smf_swarm/capability/: __init__.py  diagnostic.py
src/smf_swarm/governance/: __init__.py  audit.py  identity.py  permissions.py
src/smf_swarm/pipeline/: __init__.py  phase1_run.py
tests/: test_app_api.py  test_app_api_v4.py  test_capability_pipeline.py  test_charts_share.py  test_compare_mock_vs_llm_script.py  test_governance.py  test_llm_settings.py  test_predictive_engine.py
